--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2">
-                    <strong>Coming Soon</strong>
+                    <strong>Comeing Soon</strong>
                 </h3>
                 <h4 class="mbr-section-subtitle mb-5 align-center mbr-fonts-style display-7">Yeah ill work on this</h4>
                 <div class="countdown-cont align-center mb-5">
