--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>Dm12e - Home</title>
   <link rel="stylesheet" href="./index_files/bootstrap.min.css">
   <link rel="stylesheet" href="./index_files/bootstrap-grid.min.css">
   <link rel="stylesheet" href="./index_files/bootstrap-reboot.min.css">
