--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>DM12e - Home!!</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
