--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="col-12 col-md">
                 <div class="text-wrapper">
                     <h2 class="mbr-section-title mb-3 mbr-fonts-style display-2"><strong>Wellcome!!</strong></h2>
-                    <p class="mbr-text mb-3 mbr-fonts-style display-7">Yeah ill up date this&nbsp;<br>HHHHHHHHHHHHHHHHHHHHHH<br>hhhhhhHHHhHHHhhhhhhhhhh</p>
+                    <p class="mbr-text mb-3 mbr-fonts-style display-7">Yeah ill work on this&nbsp;<br>HHHHHHHHHHHHHHHHHHHHHH<br>hhhhhhHHHhHHHhhhhhhhhhh</p>
                     <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#slider1-c">My work?</a></div>
                 </div>
             </div>
