--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="col-12 col-md-12">
                 <blockquote>
                 <h5 class="mbr-section-title mbr-fonts-style mb-2 display-7"><strong>Email Me!</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-4">Idk how to copy (on your clipboard) My Email address and open <a href="https://mail.google.com/mail/u/0/#inbox" class="text-primary">Gmail</a><br>Email : mdm12epe@gmail.com<br>Open <a href="https://mail.google.com/mail/u/0/#inbox" class="text-primary" target="_blank">Gmail</a><br></p></blockquote>
+                <p class="mbr-text mbr-fonts-style display-4">Idk how to copy (on your clipboard) My Email address and open <a href="https://mail.google.com/mail/u/0/#inbox" class="text-primary">Gmail</a><br>Email : mdm12epe@gmail.com<br>Open <a href="https://mail.google.com/mail/u/0/#inbox" class="text-primary" target="_blank">Gmail (in new window)</a><br></p></blockquote>
             </div>
         </div>
     </div>
