--- a/The ultimate Youtube investigationhorror.html
+++ b/The ultimate Youtube investigationhorror.html
@@ -83,7 +83,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>The ultimate Youtube horror/investigation Sample pack</strong></h1>
-                <p class="mbr-text mbr-fonts-style display-4">Shit I pot together (And Yes its free)</p>
+                <p class="mbr-text mbr-fonts-style display-4">Shit I put together (And Yes its free)</p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="page1.html#header16-n">Download (Mega.nz)</a> <a class="btn btn-primary display-4" href="page1.html#header16-n">bittorrent (please keep seeding)</a></div>
                 <div class="video-wrapper mt-4"><iframe class="mbr-embedded-video" src="https://www.youtube.com?loop=1&amp;autoplay=1" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
