--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="col-12 col-md-12">
                 <blockquote>
                 <h5 class="mbr-section-title mbr-fonts-style mb-2 display-7"><strong>Status/currently working on..</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-4">hhhhhhhhhhhhhhhhhhhhhhhhhhh</p></blockquote>
+                <p class="mbr-text mbr-fonts-style display-4">Got shit ton of unfinished work (School ofc) and kinka sick *coughs aggressively* shit</p></blockquote>
             </div>
         </div>
     </div>
