--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             <div class="col-12 col-md-12">
                 <blockquote>
                 <h5 class="mbr-section-title mbr-fonts-style mb-2 display-7"><strong>Status/currently working on..</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-4">Got exam's on monday
-                  (Updated on Jul sat 23)</p></blockquote>
+                <p class="mbr-text mbr-fonts-style display-4">working on some dubstep </p><audio controls>
+                  <source src="My stuff/Betaing my child type dubstep.mp3"></blockquote>
             </div>
         </div>
     </div>
