--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary-outline display-4" href="https://www.youtube.com/" target="_blank">Background Music (idk how to add mp3 files)(this will open youtube in a new tab/window)<br></a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary-outline display-4" href="https://www.youtube.com/" target="_blank">Background Music (i can add files but it will bugout [can add unseeable tho] on some devices)(this will open youtube in a new tab/window)<br></a></div>
             </div>
         </div>
     </div>
@@ -144,7 +144,7 @@
             <div class="col-12 col-md-12">
                 <blockquote>
                 <h5 class="mbr-section-title mbr-fonts-style mb-2 display-7"><strong>Status/currently working on..</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-4">working on some dubstep </p><audio controls>
+                <p class="mbr-text mbr-fonts-style display-4">working on some dubstep (May glitchout some devices) shit trash fr fr</p><audio controls>
                   <source src="My stuff/Betaing my child type dubstep.mp3"></blockquote>
             </div>
         </div>
