--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
             <div class="col-12 col-md-12">
                 <blockquote>
                 <h5 class="mbr-section-title mbr-fonts-style mb-2 display-7"><strong>Status/currently working on..</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-4">working on some dubstep (May glitchout some devices) shit trash fr fr</p><audio controls>
-                  <source src="My stuff/B̴̭͇͋̐̐̓͌̍͒̐̇͌̕͠r̴͔͎͖̃̈́̐͒̂̇́͌͂̿̐́ǎ̵͖̥̤̖̭̬̮̣̗̈́̄̓ͅi̷̛̬̝̜͇̭͔̙̗̣̬͉̬̤̾̀͆̈́̃́͊̐̽̒͗̿͝ͅn̶̰̟̋̄ ̷̨̭̤̱̗̏̔͛̔̉̉̓̐͐͝ḑ̵̦̲̈́͊̾̊̾͜͠a̷̖̳̽̐̎͂̐̽̇͘͠m̵̱̩͈͖̈́̾̾̅̏͛͊̀̾͑̅́̈́͘͝a̵̤͉̰͓͇̅́̽͛̑͛́̑̚̚ͅģ̶͙̰̜͎́ë̸̬̠͕͇̼͛̈́̈̈́̅͛̎̊̇̈́̇͘͘͠"></audio></blockquote>
+                <p class="mbr-text mbr-fonts-style display-4">working on some dubstep (May glitchout some devices) shit trash fr fr</p><audio controls> <source src="My stuff/B̴̭͇͋̐̐̓͌̍͒̐̇͌̕͠r̴͔͎͖̃̈́̐͒̂̇́͌͂̿̐́ǎ̵͖̥̤̖̭̬̮̣̗̈́̄̓ͅi̷̛̬̝̜͇̭͔̙̗̣̬͉̬̤̾̀͆̈́̃́͊̐̽̒͗̿͝ͅn̶̰̟̋̄ ̷̨̭̤̱̗̏̔͛̔̉̉̓̐͐͝ḑ̵̦̲̈́͊̾̊̾͜͠a̷̖̳̽̐̎͂̐̽̇͘͠m̵̱̩͈͖̈́̾̾̅̏͛͊̀̾͑̅́̈́͘͝a̵̤͉̰͓͇̅́̽͛̑͛́̑̚̚ͅģ̶͙̰̜͎́ë̸͛.mp3" type="audio/mpeg"></audio></blockquote>
             </div>
         </div>
     </div>
