Update The ultimate Youtube investigationhorror.html

--- a/The ultimate Youtube investigationhorror.html
+++ b/The ultimate Youtube investigationhorror.html
@@ -85,7 +85,7 @@
             <div class="col-12 col-lg-10">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>The ultimate Youtube horror/investigation Sample pack</strong></h1>
                 <p class="mbr-text mbr-fonts-style display-4">Shit I put together (And Yes its free) (<a href="https://mega.nz/file/ZjxCWKSK#kdYHkz-G9oLxjwJlZhPZqPWx8fzO4Kf0mjl6RjUb7aQ" class="text-black" target="_blank">Download beta</a>)</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="page1.html#header16-n">Download (Mega.nz)</a> <a class="btn btn-primary display-4" href="page1.html#header16-n">bittorrent (please keep seeding)</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="https://rekonise.com/the-ultimate-youtube-horrorinvestigation-sample-pack-lenue">Download (Mega.nz)</a> <a class="btn btn-primary display-4" href="page1.html#header16-n">bittorrent (please keep seeding)</a></div>
                 <div class="video-wrapper mt-4"><iframe class="mbr-embedded-video" src="https://www.youtube.com?loop=1&amp;autoplay=1" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
         </div>
