--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
             <div class="col-12 col-md-12">
                 <blockquote>
                 <h5 class="mbr-section-title mbr-fonts-style mb-2 display-7"><strong>Status/currently working on..</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-4">hhave exams 17th </p></audio></blockquote>
+                <p class="mbr-text mbr-fonts-style display-4">hhave exams 17th 
+                  UP DATE: last exam 30 sep 2022</p></audio></blockquote>
             </div>
         </div>
     </div>
