--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="col-12 col-md-12">
                 <blockquote>
                 <h5 class="mbr-section-title mbr-fonts-style mb-2 display-7"><strong>Status/currently working on..</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-4">making some shit idk i hate sound design and maing some dub/dethstep</p></audio></blockquote>
+                <p class="mbr-text mbr-fonts-style display-4">YO BOI GONNA GET A SPOTFY PAGE <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/0Bi1KjM5TR9P5630pYTTKA?utm_source=generator&theme=0" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></p></audio></blockquote>
             </div>
         </div>
     </div>
