--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="row h-100">
                     <div class="col-md-6 col-xl-6 text-start text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="background: rgb(195, 209, 215);border-radius: 35px;color: rgb(35,39,41);">
                         <div style="max-width: 350px;margin: 92px;">
-                            <h1 class="text-uppercase fw-bold text-start">Welcome!</h1>
+                            <h1 class="text-uppercase fw-bold text-start">Welcome!¡</h1>
                             <p class="text-start my-3">I like to do cool stuff, be free to browse it all!.<br>The relevant stuff is available on the&nbsp;<br>navigation bar =)<br><br></p>
                         </div>
                     </div>
